# Sily

./: Cargo.toml  README.md  install.sh  phase0_probe.py
.github/workflows/: release.yml
crates/sily-adapter-claude/: Cargo.toml
crates/sily-adapter-claude/examples/: realcheck.rs
crates/sily-adapter-claude/src/: convert.rs  encode.rs  lib.rs  provider.rs  store.rs
crates/sily-adapter-codex/: Cargo.toml
crates/sily-adapter-codex/src/: lib.rs  provider.rs
crates/sily-adapter-gemini/: Cargo.toml
crates/sily-adapter-gemini/src/: lib.rs
crates/sily-adapter-opencode/: Cargo.toml
crates/sily-adapter-opencode/src/: lib.rs  provider.rs
crates/sily-adapter-pi/: Cargo.toml
crates/sily-adapter-pi/src/: lib.rs
crates/sily-cli/: Cargo.toml
crates/sily-cli/src/: branchstore.rs  brand.rs  commitstore.rs  graph.rs  idfmt.rs  main.rs  render.rs  tui.rs  update.rs
crates/sily-core/: Cargo.toml
crates/sily-core/src/: error.rs  lib.rs  model.rs  ops.rs  provider.rs  store.rs
