[workspace]
resolver = "2"
members = ["crates/sily-core", "crates/sily-adapter-claude", "crates/sily-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["amitsinghtanwar"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
