[workspace]
resolver = "2"
members = [
    "crates/sily-core",
    "crates/sily-adapter-claude",
    "crates/sily-adapter-codex",
    "crates/sily-adapter-opencode",
    "crates/sily-adapter-gemini",
    "crates/sily-adapter-pi",
    "crates/sily-cli",
]

[workspace.package]
version = "0.14.0"
edition = "2021"
license = "MIT"
authors = ["amitsinghtanwar"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
owo-colors = { version = "4", features = ["supports-colors"] }
ratatui = "0.29"
