[package]
name = "sily-adapter-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Claude Code adapter for sily: reads/writes ~/.claude session .jsonl files."

[dependencies]
sily-core = { path = "../sily-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
