[package]
name = "sily-adapter-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OpenCode adapter for sily: reads sessions from its SQLite database."

[dependencies]
sily-core = { path = "../sily-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
