[package]
name = "sily-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "sily CLI: git-like commit / branch / revert for AI sessions."

[[bin]]
name = "sily"
path = "src/main.rs"

[dependencies]
sily-core = { path = "../sily-core" }
sily-adapter-claude = { path = "../sily-adapter-claude" }
sily-adapter-codex = { path = "../sily-adapter-codex" }
sily-adapter-opencode = { path = "../sily-adapter-opencode" }
sily-adapter-gemini = { path = "../sily-adapter-gemini" }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
owo-colors = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
